--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">pant</string>
-    <string name="open_app">Open pant</string>
-    <string name="close_app">Close pant</string>
+    <string name="open_nav">Open pant</string>
+    <string name="close_nav">Close pant</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
